ifpma.org (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 3201,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.74,
  "homepage_snapshot_redirected_domain": "ifpma.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402212038id_/http://ifpma.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402212038id_/http%3A//ifpma.org",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ifpma.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615050325id_/http%3A//ifpma.org/privacy_policy.aspx",
  "policy_title": "IFPMA - Privacy Policy",
  "policy_url": "ifpma.org/privacy_policy.aspx",
  "sha1": "eafef1ddebb6c8a7f7661441d3024335d51e796a",
  "simhash": 7841786842805367347,
  "simhash_updated": false,
  "site_hostname": "ifpma.org",
  "site_url": "http://ifpma.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615050325",
  "word_count": 493,
  "year": 2006
}

--- a/i/if/ifp/ifpma.org.html
+++ b/i/if/ifp/ifpma.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ifpma.org privacy policy that was archived on 2005-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051224080751id_/http%3A//www.ifpma.org/privacy_policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ifpma.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615050325id_/http%3A//ifpma.org/privacy_policy.aspx) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -12,12 +12,22 @@
 </head>
 <body bgcolor="#FFFFFF" text="#000000" topmargin="0" leftmargin="0">
 
+<style type="text/css">
+.MarketingCodePos
+{
+	position:absolute;
+	left:400px;
+	top:0px;
+}
+
+    </style>
+
 <!--Authenticated Identity is: </br> -->
 <table width="780" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr> 
     <td colspan="3" nowrap=""><img src="/images/clear.gif" width="15"><a href="/index.aspx"><img src="/images/logo_ifpma.gif" width="348" height="65" border="0"></a></td>
     
-  <td colspan="3" align="right" bgcolor="#9A9A9A"><a href="http://www.ifpma.org/clinicaltrials.html" target="_blank"><img src="/images/img_mast_main_clinical_tria.jpg" width="380" height="91" border="0"></a><br>
+  <td colspan="3" align="right" bgcolor="#9A9A9A"><a href="http://www.ifpma.org/clinicaltrials" target="_blank"><img src="/images/img_mast_main_clinical_tria.jpg" width="380" height="91" border="0"></a><br>
     <img src="/images/clear.gif" height="1"><br>
 	<a id="MainHeader_MainHeaderUser_logOut" name="Sign Out"></a>
 
@@ -39,13 +49,14 @@
 <a href="/News/index.aspx">
 <img id="News" src="/images/nav/nav_news_off.gif" onmouseover="this.src='/images/nav/nav_news_on.gif';" onmouseout="this.src='/images/nav/nav_news_off.gif';" width="130" height="24" alt="News" border="0"></a></td> 
 <td width="130">
-<a href="http://www.ifpma.org/clinicaltrials.html" target="_blank">
+<a href="//www.ifpma.org/clinicaltrials" target="_blank">
 <img id="Events" src="/images/nav/nav_clinical_off.gif" onmouseover="this.src='/images/nav/nav_clinical_on.gif';" onmouseout="this.src='/images/nav/nav_clinical_off.gif';" width="129" height="24" alt="Clinical Trials Portal" border="0"></a></td>
 <td width="119">
 <a href="/About_Us/about.aspx">
 <img id="About Us" src="/images/nav/nav_aboutus_off.gif" onmouseover="this.src='/images/nav/nav_aboutus_on.gif';" onmouseout="this.src='/images/nav/nav_aboutus_off.gif';" width="118" height="24" alt="About Us" border="0"></a></td>
 </tr>
 </tbody></table>
+<div class="MarketingCodePos"><a href="/Issues/issues_market.aspx"><img src="/images/Marketing code callout.jpg" border="0"></a></div>
 
 
 
@@ -197,13 +208,16 @@
 .style1 {font-size: 10px}
 -->
 </style>
+<link href="../css/styles.css" rel="stylesheet" type="text/css">
 <table width="780" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
     <td class="brown_td" height="1"><img src="/images/clear.gif" width="1"></td>
+    <td class="brown_td" height="1"><img src="/images/clear.gif" width="1"></td>
   </tr>
   <tr class="left_margin">
-    <td height="25" class="beige_td_10"> <a href="/privacy_policy.aspx" class="style1">Privacy Policy</a> | Copyright© 2005 
+    <td height="25" class="beige_td_10"> <a href="/privacy_policy.aspx" class="style1">Privacy Policy</a> | Copyright© 2005-2006 
       IFPMA</td>
+    <td class="beige_td_10"><div align="right"><a href="../Login/ExtranetLogin.aspx" class="style1">IFPMA Extranet</a></div></td>
   </tr>
 </tbody></table>
 
