quetek.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 1433,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.51,
  "homepage_snapshot_redirected_domain": "quetek.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402232154id_/http://quetek.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402232154id_/http%3A//quetek.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "quetek.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615050400id_/http%3A//quetek.com/privacy.htm",
  "policy_title": "File recovery and data recovery software - QueTek Consulting Corporation",
  "policy_url": "quetek.com/privacy.htm",
  "sha1": "5249e9376aca9dd35c8ddcf6d9e2a94c65c7d419",
  "simhash": 1208018712369360307,
  "simhash_updated": false,
  "site_hostname": "quetek.com",
  "site_url": "http://quetek.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615050400",
  "word_count": 223,
  "year": 2006
}

--- a/q/qu/que/quetek.com.html
+++ b/q/qu/que/quetek.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the quetek.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228171355id_/http%3A//quetek.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the quetek.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615050400id_/http%3A//quetek.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>File recovery and data recovery software - QueTek Consulting Corporation</title>
@@ -71,6 +71,12 @@ destroyed,deletion,reliable,failed,corruption,formatted,usa,u.s.,america,america
 	<tr>
 		<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.bbbonline.org/cks.asp?id=100121410455613623" target="new"><img align="middle" alt="Meets allBBBOnLine Reliability participation and Better Business Bureau membership standards." border="0" height="80" src="images/qt_bbb_reliable_system.gif" width="52"></a></td>
 	</tr>
+	<tr>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;&nbsp;<a href="https://seal.verisign.com/splash?form_file=fdf/splash.fdf&amp;type=GOLD&amp;sealid=2&amp;dn=payment2.quetek.com&amp;lang=en" target="new"><img align="middle" alt="Data Recovery Software &amp; Services - VefiSign Secure Order" border="0" src="images/getseal2.gif"></a></td>
+	</tr>
 </tbody></table>
 
           </td>
@@ -108,7 +114,7 @@ any issues with the utmost urgency.</p>
   <tbody><tr>
     <td valign="middle">
       <div align="center" class="footer"><br>
-      Copyright © 1998-2005 QueTek™ Consulting Corporation (Houston, Texas).<br>
+      Copyright © 1998-2006 QueTek™ Consulting Corporation (Houston, Texas).<br>
       Send email to <a href="mailto:help@quetek.com">help@quetek.com</a> with questions or comments about this web site.<br>
       To learn more about how we protect your information, see our <a href="privacy.htm">Privacy Policy</a><br><br>
       </div>
