--- a/p/po/por/pornaccess.com.html
+++ b/p/po/por/pornaccess.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pornaccess.com privacy policy that was archived on 2005-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051225011500id_/http%3A//www.pornaccess.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pornaccess.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615050632id_/http%3A//pornaccess.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>PornAccess : One password... Infinite Porn !</title>
@@ -15,13 +15,13 @@
 <table border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td><img src="../skins/women/images/index_stats_1.gif" width="269" height="30"></td>
-    <td width="51" valign="top" background="../skins/women/images/index_stats_2.gif" class="nt-text" style="padding-top: 7px;"><strong>749</strong></td>
+    <td width="51" valign="top" background="../skins/women/images/index_stats_2.gif" class="nt-text" style="padding-top: 7px;"><strong>932</strong></td>
     <td valign="middle"><img src="../skins/women/images/index_stats_3.gif" width="108" height="30"></td>
-    <td width="56" valign="top" background="../skins/women/images/index_stats_4.gif" class="nt-text" style="padding-top: 7px;"><strong>5106</strong></td>
+    <td width="56" valign="top" background="../skins/women/images/index_stats_4.gif" class="nt-text" style="padding-top: 7px;"><strong>6089</strong></td>
     <td valign="middle"><img src="../skins/women/images/index_stats_5.gif" width="81" height="30"></td>
-    <td width="68" valign="top" background="../skins/women/images/index_stats_6.gif" class="nt-text" style="padding-top: 7px;"><strong>1313</strong></td>
+    <td width="68" valign="top" background="../skins/women/images/index_stats_6.gif" class="nt-text" style="padding-top: 7px;"><strong>1592</strong></td>
     <td valign="middle"><img src="../skins/women/images/index_stats_7.gif" width="93" height="30"></td>
-    <td width="68" valign="top" background="../skins/women/images/index_stats_8.gif" class="nt-text" style="padding-top: 7px;"><strong>21866 
+    <td width="68" valign="top" background="../skins/women/images/index_stats_8.gif" class="nt-text" style="padding-top: 7px;"><strong>31128 
       GB</strong> </td>
   </tr>
 </tbody></table>
