--- a/h/ho/hos/hostek.com.html
+++ b/h/ho/hos/hostek.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hostek.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220200440id_/http%3A//hostek.com/web-hosting-privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hostek.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615050831id_/http%3A//www.hostek.com/web-hosting-privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Affordable Web Hosting - HosTek.com</title>
