--- a/a/ai/aih/aihw.gov.au.html
+++ b/a/ai/aih/aihw.gov.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the aihw.gov.au privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214223210id_/http%3A//www.aihw.gov.au/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aihw.gov.au privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615050908id_/http%3A//www.aihw.gov.au/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -36,8 +36,8 @@
 	<!--L--><div class="L">
 
 
-<div class="home">
-	<h4>AIHW&nbsp;contact&nbsp;details</h4>
+<div class="boxA" style="margin-top: 6px;">
+	<h4 class="Ls">AIHW&nbsp;contact&nbsp;details</h4>
 	<p>26&nbsp;Thynne&nbsp;Street<br>
 	Fern&nbsp;Hill&nbsp;Park<br>
 	Bruce&nbsp;ACT</p>
@@ -45,8 +45,8 @@
 	Canberra&nbsp;ACT&nbsp;2601</p>
 	<p>Tel 61&nbsp;2&nbsp;6244&nbsp;1000<br>
 	Fax 61&nbsp;2&nbsp;6244&nbsp;1299</p>
-	<p>Email <script language="JavaScript" type="text/javascript">writeEmailLink('info',null,'AIHW services enquiry');</script><a href="mailto:info@aihw.gov.au?subject=AIHW services enquiry&amp;body=%0D----------%0DBrowser%3A%20Mozilla/5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36%0DURL%3A%20https%3A//web.archive.org/web/20051214223210id_/http%253A//www.aihw.gov.au/privacy.cfm%0D">info@aihw.gov.au</a><noscript><i>info</i></noscript><br>
-	Web www.aihw.gov.au</p>
+	<p>Email <script language="JavaScript" type="text/javascript">writeEmailLink('info',null,'AIHW services enquiry');</script><a href="mailto:info@aihw.gov.au?subject=AIHW services enquiry&amp;body=%0D----------%0DBrowser%3A%20Mozilla/5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36%0DURL%3A%20https%3A//web.archive.org/web/20060615050908id_/http%253A//www.aihw.gov.au/privacy.cfm%0D">info@aihw.gov.au</a><noscript><i>info</i></noscript></p>
+	<p>Web www.aihw.gov.au</p>
 	<p>A proud partner of<br> 
 	<a href="http://www.healthinsite.gov.au" title="HealthInsite"><img src="/images/logos/hi.gif" alt="HealthInsite" width="92" height="54"></a></p>
 </div>
@@ -89,9 +89,9 @@
 		
 	
 <div id="publications">
-	<p><b><a href="/mediacentre/2005/mr20051214.cfm" title="Use of routinely collected national data sets for reporting on induced abortion in Australia">Use of routinely collected national data sets for reporting on induced abortion in Australia</a></b> (14 December 2005) (<a href="/mediacentre/2005/mr20051214.cfm" title="Release">release</a> and <a href="/publications/index.cfm/title/10206" title="Publication">publication</a>)</p>
-	<p><b><a href="/mediacentre/2005/mr20051213.cfm" title="Diabetes-related deaths in Australia, 2001-2003">Diabetes-related deaths in Australia, 2001-2003</a></b> (13 December 2005) (<a href="/mediacentre/2005/mr20051213.cfm" title="Release">release</a> and <a href="/publications/index.cfm/title/10221" title="Publication">publication</a>)</p>
-	<p><b><a href="/mediacentre/2005/mr20051209.cfm" title="Australia's Mothers and Babies 2003">Australia's Mothers and Babies 2003</a></b> (9 December 2005) (<a href="/mediacentre/2005/mr20051209.cfm" title="Release">release</a> and <a href="/publications/index.cfm/title/10202" title="Publication">publication</a>)</p>
+	<p><b><a href="/mediacentre/2006/mr20060615.cfm" title="2005 Community Housing National Social Housing Survey">2005 Community Housing National Social Housing Survey</a></b> (15 June 2006) (<a href="/mediacentre/2006/mr20060615.cfm" title="Release">release</a> and <a href="/publications/index.cfm/title/10286" title="Publication">publication</a>)</p>
+	<p><b><a href="/mediacentre/2006/mr20060615.cfm" title="2005 Public Housing National Social Housing Survey">2005 Public Housing National Social Housing Survey</a></b> (15 June 2006) (<a href="/mediacentre/2006/mr20060615.cfm" title="Release">release</a> and <a href="/publications/index.cfm/title/10296" title="Publication">publication</a>)</p>
+	<p><b><a href="/publications/index.cfm/title/10298" title="Access to dental services among Australian children and adults">Access to dental services among Australian children and adults</a></b> (15 June 2006) (<a href="/publications/index.cfm/title/10298" title="Publication">publication</a>)</p>
 </div>
 	
 	
@@ -146,11 +146,11 @@
 <table id="publications">
 	<tbody><tr>
 		<td class="M"><a href="/publications/index.cfm/title/10186"><b>Get your copy now!</b></a><br>
-		<a href="/publications/index.cfm/title/10186" title="Australia's Welfare 2005"><img src="/publications/aus/aw05/aw05.jpg" title="Australia's Welfare 2005"></a><br>
-		<a href="/publications/index.cfm/title/10186" title="Australia's Welfare 2005"><b>Australia's Welfare 2005</b></a></td>
+		<a href="/publications/index.cfm/title/10186" title="Australia's welfare 2005"><img src="/publications/aus/aw05/aw05.jpg" title="Australia's welfare 2005"></a><br>
+		<a href="/publications/index.cfm/title/10186" title="Australia's welfare 2005"><b>Australia's welfare 2005</b></a></td>
 		<td class="M"><a href="/publications/index.cfm/title/10014"><b>Get your copy now!</b></a><br>
-		<a href="/publications/index.cfm/title/10014" title="Australia's Health 2004"><img src="/publications/aus/ah04/ah04.jpg" title="Australia's Health 2004"></a><br>
-		<a href="/publications/index.cfm/title/10014" title="Australia's Health 2004"><b>Australia's Health 2004</b></a></td>
+		<a href="/publications/index.cfm/title/10014" title="Australia's health 2004"><img src="/publications/aus/ah04/ah04.jpg" title="Australia's health 2004"></a><br>
+		<a href="/publications/index.cfm/title/10014" title="Australia's health 2004"><b>Australia's health 2004</b></a></td>
 	</tr>
 </tbody></table>
 	
@@ -216,7 +216,7 @@ contact number.</p>
 	</div><!--/M-->
 </div>
 
-<!--F--><div id="footer"><ul><li> <a href="/accessibility.cfm" title="Accessibility">Accessibility</a> </li><li> <a href="/contactus.cfm" title="Contact us">Contact&nbsp;us</a> </li><li> <a href="/copyright.cfm" title="Copyright">Copyright</a> </li><li> <a href="/disclaimer.cfm" title="Disclaimer">Disclaimer</a> </li><li> <a href="/faqs.cfm" title="FAQs">FAQs</a> </li><li> <a href="/links.cfm" title="Links">Links</a> </li><li> <a href="/privacy.cfm" title="Privacy">Privacy</a> </li><li> <a href="/sitemap.cfm" title="Sitemap">Sitemap</a> </li></ul></div><!--/F-->
+<!--F--><div id="footer"><ul><li> <a href="/accessibility.cfm" title="Accessibility">Accessibility</a> </li><li> <a href="/contactus.cfm" title="Contact us">Contact&nbsp;us</a> </li><li> <a href="/copyright.cfm" title="Copyright">Copyright</a> </li><li> <a href="/disclaimer.cfm" title="Disclaimer">Disclaimer</a> </li><li> <a href="/faqs.cfm" title="FAQs">FAQs</a> </li><li> <a href="/links.cfm" title="Links">Links</a> </li><li> <a href="/privacy.cfm" title="Privacy">Privacy</a> </li><li> <a href="/sitemap.cfm" title="Sitemap">Sitemap</a> </li></ul><p>ABN 16&nbsp;515&nbsp;245&nbsp;497</p></div><!--/F-->
 
 
 
