--- a/h/ho/hot/hotterxxx.com.html
+++ b/h/ho/hot/hotterxxx.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hotterxxx.com privacy policy that was archived on 2005-11-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051123021110id_/http%3A//www.hotterxxx.com/%3Fpage%3Dprivacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hotterxxx.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615051437id_/http%3A//hotterxxx.com/%3Fpage%3Dprivacypolicy) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
