--- a/a/ar/art/articlestreet.com.html
+++ b/a/ar/art/articlestreet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the articlestreet.com privacy policy that was archived on 2005-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051216202650id_/http%3A//www.articlestreet.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the articlestreet.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615051623id_/http%3A//www.articlestreet.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -7,11 +7,13 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
-<meta name="DESCRIPTION" content="A directory of quality reprintable articles. Authors can submit their articles to our growing database and gain free targeted traffic to their websites. Publishers can access these articles and publish them on their website feeding content hungry search engines resulting in targeted search engine traffic.">
+<!--
+<META NAME="DESCRIPTION" CONTENT="A directory of free articles for reprint. Authors can submit their articles to our growing database and gain free targeted traffic to their websites. Publishers can access these free articles and publish them on their website feeding content hungry search engines resulting in targeted search engine traffic.">
 
-<meta name="KEYWORDS" content="articles, New articles, articleauthor, authors, your article, my article, to post my article">
+<META NAME="KEYWORDS" CONTENT="articles, New articles, articleauthor, authors, your article, my article, to post my article">
+-->
 
-<title>ArticleStreet.com</title>
+<title>Free Articles for Reprint on Websites and in eZines - ArticleStreet.com</title>
 
 <link rel="Stylesheet" href="http://www.articlestreet.com/mainstyle.css" type="text/css" media="screen">
 
@@ -38,23 +40,17 @@ urchinTracker();
 
 <tbody><tr>
 
-<td colspan="1"><a href="http://www.articlestreet.com"><img border="0" src="http://www.articlestreet.com/images/logo.gif"></a></td>
-
-<td colspan="1"></td>
+<td colspan="2"><a href="http://www.articlestreet.com"><img border="0" src="http://www.articlestreet.com/images/logo.gif"></a></td>
 
 </tr>
 
 
 
 <tr>
-
-<form name="serch" method="post" action="http://www.articlestreet.com/indexser.php"></form><input type="hidden" name="PHPSESSID" value="797abb4816a2dee63558d8f32467fb50">
-
-<td class="topnav" colspan="2">Search:
-
-<input type="text" name="serch" size="31" style="font-family: verdana; font-size: 11px; color: #333333; border: 1px solid #C0C0C0"></td>
-
-
+<form name="search" method="post" action="http://www.articlestreet.com/indexser.php"></form><input type="hidden" name="PHPSESSID" value="d55294fdc8d78ec08ed09388575f98dc">
+<td colspan="2" bgcolor="#23C97F" align="right">Search for Free Articles:
+<input type="text" name="search" value="" size="31" style="font-family: verdana; font-size: 11px; color: #333333; border: 1px solid #C0C0C0">
+</td>
 
 </tr>
 
@@ -112,6 +108,24 @@ This statement and the policies outlined herein are not intended to and do not c
 </div>
 
 <div class="spacer"></div>
+<div class="rightnavbox">
+<b><center>
+Can't write? No Problem!
+</center></b>
+<br>
+You already know that <b>article marketing</b> is the one thing that gets you ranked high in search engines and gets a swarm of quality traffic to your site, FAST. Get high quality original articles written for you. <b><a href="http://www.articlestreet.com/ghost_writer/index.php">Ghost writers</a></b> are waiting to help you out!
+</div>
+
+<div class="spacer"></div>
+<div class="rightnavbox">
+<b><center>
+Want to Make Adsense Money?
+</center></b>
+<br>
+Already have an adsense account but find the $100 - $500 per day target elusive? No worries. You can now <a href="http://www.articlestreet.com/make_adsense_profits/index.php"><b>make real money using adsense</b></a>. A guaranteed way to make your adsense income skyrocket! <b>Try it today</b>. A no risk system with <b>100% money back guarantee</b>!
+</div>
+
+<div class="spacer"></div>
 
 <div class="rightnavbox">
 <a href="http://www.articlestreet.com/submitarticles.php">Submit Articles</a><br>
@@ -132,61 +146,36 @@ This statement and the policies outlined herein are not intended to and do not c
 <a href="http://www.articlestreet.com/contacts.php">Contact Us</a><br>
 <a href="http://www.articlestreet.com/privacy.php">Privacy Policy</a><br>
 <a href="http://www.articlestreet.com/terms.php">Terms of Service</a><br>
+<a href="http://www.articlestreet.com/arst/index.php">Some Useful Resources</a><br>
+</div>
+
+<div class="spacer"></div>
+<div class="rightnavbox">
+<center><b>Article Categories</b></center><br>
+<a href="http://www.articlestreet.com/Category/Arts-and-Entertainment/50">Arts &amp; Entertainment</a><br>
+<a href="http://www.articlestreet.com/Category/Business/51">Business</a><br>
+<a href="http://www.articlestreet.com/Category/Communications/54">Communications</a><br>
+<a href="http://www.articlestreet.com/Category/Computers-and-Technology/52">Computers &amp; Technology</a><br>
+<a href="http://www.articlestreet.com/Category/Disease-and-Illness/55">Disease &amp; Illness</a><br>
+<a href="http://www.articlestreet.com/Category/Finance/56">Finance</a><br>
+<a href="http://www.articlestreet.com/Category/Food-and-Drink/177">Food &amp; Drink</a><br>
+<a href="http://www.articlestreet.com/Category/Health-and-Fitness/53">Health &amp; Fitness</a><br>
+<a href="http://www.articlestreet.com/Category/Home-and-Family/58">Home &amp; Family</a><br>
+<a href="http://www.articlestreet.com/Category/Internet-Business/159">Internet Business</a><br>
+<a href="http://www.articlestreet.com/Category/Legal/181">Legal</a><br>
+<a href="http://www.articlestreet.com/Category/Recreation-and-Sports/148">Recreation &amp; Sports</a><br>
+<a href="http://www.articlestreet.com/Category/Self-Improvement/57">Self Improvement</a><br>
+<a href="http://www.articlestreet.com/Category/Society/142">Society</a><br>
+<a href="http://www.articlestreet.com/Category/Writing-and-Speaking/154">Writing &amp; Speaking</a><br>
 </div>
 
 <div class="spacer"></div>
 <div class="rightnavbox"><center>
-<script type="text/javascript"><!--
-google_ad_client = "pub-2138700104149875";
-google_ad_width = 160;
-google_ad_height = 600;
-google_ad_format = "160x600_as";
-google_ad_type = "text_image";
-google_ad_channel ="8169593300";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "000000";
-google_color_url = "FFFFFF";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+<a href="http://secure.inspedium.com/affiliate/idevaffiliate.php?id=102_4_1_3"><img src="http://secure.inspedium.com/affiliate/banners/freedom_120_60.gif" border="0"></a>
+<br><br>
+<script type="text/javascript" language="JavaScript" src="http://xslt.alexa.com/site_stats/js/t/a?amzn_id=inspediumsweb-20&amp;url=www.articlestreet.com"></script>
 </center>
-<br>
-<center>
-<script type="text/javascript"><!--
-google_ad_client = "pub-2138700104149875";
-google_ad_width = 160;
-google_ad_height = 600;
-google_ad_format = "160x600_as";
-google_ad_type = "text_image";
-google_ad_channel ="8169593300";
-google_color_border = "FFFFFF";
-google_color_bg = "FFFFFF";
-google_color_link = "000000";
-google_color_url = "FFFFFF";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-</center>
-<br>
-<center>
-<script type="text/javascript"><!--
-google_ad_client = "pub-2138700104149875";
-google_ad_width = 120;
-google_ad_height = 240;
-google_ad_format = "120x240_as_rimg";
-google_cpa_choice = "CAAQjeWZzgEaCGUPemYRwK8bKPG193M";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-</center></div>
-
-<!-- <div class="spacer"></div>
-<div class="rightnavbox"><center>
-<A HREF="http://www.articlestreet.com/articlemarketer" target="_blank"><IMG SRC="http://www.articlestreet.com/images/articlemarketer.gif" BORDER="0"></A></center>
-</div> -->
+</div>
 </td> <!-- End of Main Content -->
 </tr>
 
