--- a/r/re/rea/realsocialdynamics.com.html
+++ b/r/re/rea/realsocialdynamics.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the realsocialdynamics.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230072858id_/http%3A//www.realsocialdynamics.com/privacy_policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the realsocialdynamics.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615051624id_/http%3A//realsocialdynamics.com/privacy_policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Real Social Dynamics Privacy Policy</title>
