--- a/b/bo/boo/boortz.com.html
+++ b/b/bo/boo/boortz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the boortz.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215112730id_/http%3A//boortz.com/inside/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the boortz.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615051711id_/http%3A//boortz.com/inside/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -17,12 +17,10 @@ Gotta Say It.">
 
 <script language="JavaScript">
 <!--//
-var ss = "/templates/boortz.css";
-if (navigator.appName.substring(0,8) == "Netscape")
-ss = "/templates/boortz_nn.css";
-if (navigator.appName.substring(0,9) == "Microsoft")
-ss = "/templates/boortz_ie.css";
-document.write ('<link rel=stylesheet type="text/css" href="' + ss + '">');
+if (document.layers)
+ss = "boortz_nn.css";
+else ss = "boortz_ie.css";
+document.write ('<link rel=stylesheet type="text/css" href="http://955thebeat.com/common/templates/' + ss + '">');
 
 
 function echeck(str) {
@@ -87,7 +85,7 @@ function ValidateForm(){
  }
 
 //-->
-</script><link rel="stylesheet" type="text/css" href="/templates/boortz_nn.css">
+</script><link rel="stylesheet" type="text/css" href="http://955thebeat.com/common/templates/boortz_ie.css">
 
 
 <script language="JavaScript">
@@ -115,7 +113,7 @@ var months=new Array("Jan","Feb","Mar","Apr.","May","Jun","Jul","Aug","Sep","Oct
 <table width="100%" cellspacing="0" cellpadding="0" border="0">
 <tbody><tr><td align="left" valign="middle" width="245"><a href="/index.html"><img src="/templates/images/logo.gif" width="245" height="99" alt="" border="0"></a></td>
 <td align="center" valign="middle" width="100%"><span class="adhed">ADVERTISEMENT</span><br>
-                        <nolayer><iframe src="http://ad.doubleclick.net/adi/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=468x60;tile=1;ord=Q6FTIAoAAHUAAAvXLNk?" width="468" height="60" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no"><a href="http://ad.doubleclick.net/jump/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=468x60;tile=1;ord=Q6FTIAoAAHUAAAvXLNk?"><img src="http://ad.doubleclick.net/ad/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl; sz=468x60;tile=1;ord=Q6FTIAoAAHUAAAvXLNk?" height=60 width=468 border="0"></A></iframe></nolayer><ilayer id="ph468601" visibility="hidden" width="468" height="60"></ilayer>
+                        <a href="/nuze/"><img src="/includes/ads/inhouse/nealz_nuze468.gif" width="468" height="60" alt="Nealz Nuze" border="0"></a>
 
 
 
@@ -155,7 +153,7 @@ The world-famous Internet site of the Nationally Syndicated Neal Boortz Show!
 
 <tr><td align="left" valign="middle" bgcolor="#000000" class="brwshed"><img src="/common/templates/images/look.gif" height="10" width="10" vspace="1" hspace="4" align="top" border="0" alt="">Browse Boortz.com</td></tr>
 <tr><td align="left" valign="top">
-<a href="/" class="subnavlink">Home</a><br><br><b class="navhed">Nealz Nuze</b><br><a href="/nuze/index.html" class="subnavlink">Today's Nuze</a><br><a href="/includes/archive/" class="subnavlink">Archives</a><br><br><b class="navhed">Daily reads</b><br><a href="/reads/favorites.html" class="subnavlink">All Time Favorites</a><br><a href="/reads/today.html" class="subnavlink">Today's News</a><br><br><b class="navhed">More Boortz</b><br><a href="/more/bio.html" class="subnavlink">Boortz Bio</a><br><a href="/more/faq.html" class="subnavlink">Boortz FAQ</a><br><a href="/more/sponsors.html" class="subnavlink">Boortz Sponsors</a><br><a href="/more/photos.html" class="subnavlink">Photo Gallery</a><br><a href="/more/tour.html" class="subnavlink">Tour the Studio</a><br><a href="/more/newsletter.html" class="subnavlink">Get the Boortz Blast</a><br><br><b class="navhed">Contact us</b><br><a href="/contact/index.html" class="subnavlink">How To Contact</a><br><a href="/cgi-bin/mail.cgi?id=boortz" class="subnavlink">E-mail The Show</a><br><a href="/contact/appearances.html" class="subnavlink">Speaking Engagements</a><br><a href="/contact/syndication.html" class="subnavlink">Syndication Information</a><br><br>
+<a href="/" class="subnavlink">Home</a><br><br><b class="navhed">Nealz Nuze</b><br><a href="/nuze/index.html" class="subnavlink">Today's Nuze</a><br><a href="/includes/archive/" class="subnavlink">Archives</a><br><br><b class="navhed">Daily reads</b><br><a href="/reads/favorites.html" class="subnavlink">All Time Favorites</a><br><a href="/reads/today.html" class="subnavlink">Today's News</a><br><br><b class="navhed">More Boortz</b><br><a href="/more/bio.html" class="subnavlink">Boortz Bio</a><br><a href="/more/faq.html" class="subnavlink">Boortz FAQ</a><br><a href="/more/sponsors.html" class="subnavlink">Boortz Sponsors</a><br><a href="/more/photos.html" class="subnavlink">Photo Gallery</a><br><a href="/more/tour.html" class="subnavlink">Tour the Studio</a><br><a href="/more/newsletter.html" class="subnavlink">Get the Boortz Newsletter</a><br><br><b class="navhed">Contact us</b><br><a href="/contact/index.html" class="subnavlink">How To Contact</a><br><a href="/cgi-bin/mail.cgi?id=boortz" class="subnavlink">E-mail The Show</a><br><a href="/contact/appearances.html" class="subnavlink">Speaking Engagements</a><br><a href="/contact/syndication.html" class="subnavlink">Syndication Information</a><br><br>
 </td></tr>
 </tbody></table>
 <br><img src="/common/templates/images/trans.gif" width="156" height="1">
@@ -409,7 +407,7 @@ friend</a></td><td align="left" valign="top" nowrap=""><img src="/common/templat
                 
 <span class="adhed">ADVERTISEMENT</span>
 <br>
-                <nolayer><iframe src="http://ad.doubleclick.net/adi/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=120x400;tile=2;ord=Q6FTIAoAAHUAAAvXLNk?" width="120" height="400" frameborder="0" border="0" marginheight="0" marginwidth="0" scrolling="no"><a href="http://ad.doubleclick.net/jump/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=120x400;tile=2;ord=Q6FTIAoAAHUAAAvXLNk?"><img src="http://ad.doubleclick.net/ad/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl; sz=120x400;tile=2;ord=Q6FTIAoAAHUAAAvXLNk?" height=400 width=120 border="0"></A></iframe></nolayer><ilayer id="ph1204001" visibility="hidden" width="120" height="400"></ilayer>
+                <a href="/"><img src="/includes/ads/inhouse/boortz_madtruth400.gif" width="120" height="400" alt="" border="0"></a>
 
 
 
@@ -424,7 +422,7 @@ friend</a></td><td align="left" valign="top" nowrap=""><img src="/common/templat
 <tbody><tr><td align="center" valign="top" class="foot">
 <a href="/inside/help.html" class="foot">help</a> | <a href="/ads/index.html" class="foot">how to advertise</a> | <a href="/contact/index.html" class="foot">contact us</a>
 <br><br>
-Copyright © 2005 Cox Radio Interactive &amp; <a href="http://www.coxradio.com" target="_blank" class="foot">Cox Radio, Inc.</a> All rights reserved.
+Copyright © 2006 Cox Radio Interactive &amp; <a href="http://www.coxradio.com" target="_blank" class="foot">Cox Radio, Inc.</a> All rights reserved.
 <a href="/inside/privacy.html" class="foot">Privacy Policy</a> <br>By using this website, you accept the terms of our <a href="/inside/visitor_agreement.html" class="foot">Visitor Agreement</a>. Please read it.
         <br><br>
          
@@ -432,9 +430,7 @@ Copyright © 2005 Cox Radio Interactive &amp; <a href="http://www.coxradio.com" 
 </tbody></table>
 </td></tr></tbody></table>
 </td></tr></tbody></table>
-<layer src="http://ad.doubleclick.net/adl/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=468x60;tile=1;ord=Q6FTIAoAAHUAAAvXLNk?" width="468" height="60" visibility="hidden" onload="moveToAbsolute(ph468601.pageX,ph468601.pageY); visibility='show';"></layer> 
- <layer src="http://ad.doubleclick.net/adl/cxri.boortz/inside;pg=/inside/privacy.html;mkt=atl;sz=120x400;tile=2;ord=Q6FTIAoAAHUAAAvXLNk?" width="120" height="400" visibility="hidden" onload="moveToAbsolute(ph1204001.pageX,ph1204001.pageY); visibility='show';"></layer>
-
+ 
 
 
 <!--/htdig_noindex-->
