--- a/h/he/hea/healthplan.com.html
+++ b/h/he/hea/healthplan.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the healthplan.com privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217012259id_/http%3A//www.healthplan.com/corp/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the healthplan.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615051754id_/http%3A//healthplan.com/corp/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html><head>
 <title>HealthPlan Holdings, Inc. Privacy Statement</title>
