--- a/l/li/lin/line6.com.html
+++ b/l/li/lin/line6.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the line6.com privacy policy that was archived on 2005-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051223074923id_/http%3A//line6.com/privacyPolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the line6.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615051931id_/http%3A//line6.com/privacyPolicy.html) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Line 6 - Privacy Policy</title>
@@ -12,6 +12,8 @@
 	<tbody><tr>
 		<td align="center">
 			
+
+
 <script language="JavaScript" type="text/javascript">
 	var products_off = new Image();
 	products_off.src = "/images/navigation/products_off.gif";
@@ -49,11 +51,11 @@
 	<tbody><tr>
 		<td width="242" height="80">
 			<a href="/">
-				<img src="/images/navigation/line6LogoBG.gif" width="242" height="80" border="0" alt="Line 6 - Believe"></a></td>
+				<img src="/images/navigation/line6LogoLg.gif" width="242" height="80" border="0" alt="Line 6"></a></td>
 		<td>
 			<table cellpadding="0" cellspacing="0" border="0" width="538">
 				<tbody><tr>
-					<td width="538" height="33">
+					<td width="538" height="33" colspan="2">
 						<table cellpadding="0" cellspacing="0" border="0" width="538">
 							<tbody><tr>
 								<td>
@@ -78,7 +80,10 @@
 						</tbody></table></td>
 				</tr>
 				<tr>
-					<td width="538" height="47" align="right">
+					<td width="182" height="47" align="right">
+						<a href="/10year/">
+							<img src="/images/navigation/10years.jpg" width="182" height="47" border="0"></a></td>
+					<td width="356" height="47" align="right">
 						<table cellpadding="0" cellspacing="0" border="0" align="right">
 							<tbody><tr>
 								<td>
@@ -122,6 +127,8 @@
 			</tbody></table></td>
 	</tr>
 </tbody></table>
+
+
 
 
 
@@ -333,12 +340,15 @@
 									<br>
 									
 
+ 
+
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-143873-1";
 urchinTracker();
 </script>
+
 <table cellpadding="0" cellspacing="0" border="0" width="751">
 	<tbody><tr>
 		<td>
@@ -349,7 +359,10 @@ urchinTracker();
 					<td>
 						&nbsp;</td>
 					<td align="right" class="footer">
-						© 2005 Line 6, Inc. All Rights Reserved.</td>
+						<!--&#169; 2005 Line 6, Inc. All Rights Reserved.-->
+						
+	© 2006 Line 6, Inc. All Rights Reserved.
+</td>
 				</tr>
 				<tr>
 					<td colspan="2" style="background:url(/images/footer/dotLine.gif); background-repeat:repeat-x;">
@@ -398,6 +411,7 @@ urchinTracker();
 	</tr>
 </tbody></table>
 
+
 </td>
 							</tr>
 						</tbody></table></td>
@@ -415,9 +429,6 @@ urchinTracker();
 	</tr>
 </tbody></table>
 </center>
-
-
-
 
 
 </body></html>
