bitrock.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 1641,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.62,
  "homepage_snapshot_redirected_domain": "bitrock.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060331211048id_/http://www.bitrock.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060331211048id_/http%3A//bitrock.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "bitrock.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615052146id_/http%3A//www.bitrock.com/about_privacy.html",
  "policy_title": "Bitrock :: Company :: Privacy",
  "policy_url": "bitrock.com/about_privacy.html",
  "sha1": "b27a0c4b0cb39af0d81008801d3ad015259a3605",
  "simhash": 1943330755495793582,
  "simhash_updated": true,
  "site_hostname": "bitrock.com",
  "site_url": "http://bitrock.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20060615052146",
  "word_count": 263,
  "year": 2006
}

--- a/b/bi/bit/bitrock.com.html
+++ b/b/bi/bit/bitrock.com.html
@@ -1,14 +1,13 @@
-<!--The following is the downloaded HTML source of the bitrock.com privacy policy that was archived on 2005-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051221102641id_/http%3A//bitrock.com/about_privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bitrock.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615052146id_/http%3A//www.bitrock.com/about_privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<title>Bitrock :: Company :: Privacy</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="keywords" content="Linux, Bitrock, Installbuilder, Install Builder, Installation, Software,
 Installer, LAMP, LAMPStack, Apache, Linux, MySQL, PHP, Mono">
 		
 		<style type="text/css"><!-- @import url("bitrock.css"); --> </style>
-
 		<script type="text/JavaScript">
 		<!--
 		function MM_reloadPage(init) {  //reloads the window if Nav4 resized
@@ -21,28 +20,26 @@ Installer, LAMP, LAMPStack, Apache, Linux, MySQL, PHP, Mono">
 		</script>
 </head>
 
-<body bgcolor="#FFFFFF" leftmargin="0" marginwidth="0" topmargin="0" marginheight="0">
+<body bgcolor="#C0C0C0" marginwidth="0" marginheight="0">
 
-<table cellpadding="0" cellspacing="0" border="0" width="780">
-
+<table cellpadding="0" cellspacing="0" width="780" style="margin-left:auto;margin-right:auto;margin-top:20px;margin-bottom:20px;padding-top:10px;padding-bottom:10px; border: 1px solid #736F6E" align="center" bgcolor="#FFFFFF">
 
 <tbody><tr valign="top"><td>
 
-<table cellpadding="0" cellspacing="0" border="0" width="100%">
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
 <tbody><tr>
-<td valign="middle" bgcolor="#000055" style="border-bottom: 1px solid grey;"><div style="padding-left:
+<td valign="middle" bgcolor="#FFFFFF"><div style="padding-left:
 20px; padding-top: 10px; padding-bottom:10px"><img src="images/logo.png"></div></td>
-<td valign="bottom" align="right" bgcolor="#000055" style="border-bottom: 1px solid grey;"><div id="menu-box"> <a href="home.html">Home</a> | <a href="products.html">Solutions</a> | <a href="download_overview.html">Download</a> | <a href="support_overview.html">Support</a> | <a href="open_source_commitment.html">Open Source</a> | <a href="buy_overview.html">Buy</a> | <a href="about_company.html">Company</a> &nbsp;&nbsp;&nbsp;<!--<a  class="nav" href="about_privacy_es.html"><img border=0
-src="images/es.gif"></a>--></div></td>
+<td valign="bottom" align="right" bgcolor="#FFFFFF"><div id="menu-box"> <a href="home.html">Home</a> | <a href="products.html">Products</a> | <a href="download_overview.html">Download</a> | <a href="support_overview.html">Support</a> | <a href="open_source_commitment.html">Open Source</a> | <a href="buy_overview.html">Buy</a> | <a href="about_company.html">Company</a> &nbsp;&nbsp;&nbsp;</div><img src="images/home/fading_line.png" width="505" height="15"></td>
 </tr>
 <tr>
-<td valign="center" align="left" bgcolor="#fffff" style="color: #000055;
+<td valign="center" align="left" bgcolor="#ffffff" style="color: #000055;
 padding: 2px; padding-left: 20px;
-font-size:20px; font-weigth: bold;" colspan="2">Company</td>
+font-size:20px; font-weigth: bold;" colspan="2">Company<br><img src="images/home/gray_fading_line.png"></td>
 </tr>
 <tr>
-<td valign="bottom" align="left" bgcolor="#ffffff" style=" border-top: 2px dotted #000055;" colspan="2">
-<div id="submenu-box"> <a href="about_company.html">About</a> | <a href="about_news.html">News</a> | <a href="about_customers.html">Customers</a> | <a href="about_partners.html">Partners</a> | <a href="about_careers.html">Careers</a> | <a href="about_contact.html">Contact</a> | <a href="about_investors.html">Investors</a> | <b><a href="about_privacy.html">Privacy</a></b> | <a href="about_legal.html">Legal</a> </div>
+<td valign="bottom" align="left" bgcolor="#ffffff" colspan="2">
+<div id="submenu-box"> <a href="about_company.html">About</a> | <a href="about_news.html">News</a> | <a href="about_customers_testimonials.html">Customers</a> | <a href="about_partners.html">Partners</a> | <a href="about_careers.html">Careers</a> | <a href="about_contact.html">Contact</a> | <a href="about_investors.html">Investors</a> | <b><a href="about_privacy.html">Privacy</a></b> | <a href="about_legal.html">Legal</a> </div>
 </td>
 </tr>
 </tbody></table>
@@ -50,8 +47,8 @@ font-size:20px; font-weigth: bold;" colspan="2">Company</td>
 </td></tr>
 
 <tr height="450">
-<td valign="top" align="left" height="450">
-<table cellpadding="0" cellspacing="0" border="0" valign="top" height="100%">
+<td valign="top" align="middle" height="450">
+<table border="0" cellpadding="0" cellspacing="0" valign="top" height="100%">
 <tbody><tr>
 
  
@@ -67,12 +64,12 @@ margin-right: 10px;" align="center">
 <div id="right-title"></div>
 
 <div id="content_right">
-<p>We hate spam as much as you do. At BitRock Inc, we will never share your
+<p>We hate spam as much as you do. At BitRock,  we will never share your
 information with any third party. Read below for the details.</p>
 
 <h3>BitRock Privacy Policy</h3>
 
-<p>This page explains BitRock.s policy (the "Privacy Policy") regarding
+<p>This page explains BitRock's policy (the "Privacy Policy") regarding
 the collection and use of information that can personally identify you
 whether you are a first-time or repeat visitor to our website. </p>
 
@@ -123,7 +120,7 @@ and under circumstances, if any, we disclose it. </p>
 		<td align="center" style=" border-top: 2px dotted #000055; padding-top:5px">
  <a style="text-decoration:none" href="products_installbuilder_overview.html">InstallBuilder</a> |
  <a style="text-decoration:none" href="products_lamp_overview.html">LAMPStack</a> |
- <a style="text-decoration:none" href="about_company.html">About us</a> |
+ <a style="text-decoration:none" href="about_company.html">About Us</a> |
  <a style="text-decoration:none" href="about_contact.html">Contact</a> |
  <a style="text-decoration:none" href="about_legal.html">Legal</a> |
  <a style="text-decoration:none" href="about_privacy.html">Privacy</a>
