--- a/u/ut/utt/utteraccess.com.html
+++ b/u/ut/utt/utteraccess.com.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the utteraccess.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219220733id_/http%3A//www.utteraccess.com/forums/uapriv.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the utteraccess.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615053423id_/http%3A//www.utteraccess.com/forums/uapriv.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html dir="ltr"><head> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Utter Access Discussion Forums - Privacy statement</title>
 
-<meta name="description" content="We are the number one discussion forums for Microsoft® Access, Excel, Outlook, Visual Basic, SQL Server, Anti Virus and more! With over 60,000 Members enjoying over 500,000 posts we can help you.">
+<meta name="description" content="The premier Microsoft® Access help site, plus Excel, Outlook, Visual Basic, SQL Server, Anti Virus and more! 100,000 members enjoying nearly a million posts...it's 100% free and fun too!">
 
-<meta name="keywords" content="microsoft access help, microsoft access 2000 help, microsoft access online help, microsoft access 2002 help, microsoft access 97 help, microsoft access help database, microsoft access help, access help, ms access help, access database help, access 2000 help, access 2002 help, microsoft sql server, microsoft sql server 2000, microsoft sql server administration, microsoft sql server 7.0, microsoft sql server tutorial, microsoft sql server database, microsoft visual basic, microsoft visual basic 6.0, microsoft access visual basic, microsoft visual basic tutorial, microsoft excel visual basic, microsoft visual basic help, forum microsoft, microsoft access forum, microsoft excel forum, forum microsoft outlook, forum microsoft word, microsoft outlook express help, microsoft power point help, microsoft project help, microsoft technical help, microsoft help workshop, microsoft word 2000 help">
+<meta name="keywords" content="microsoft access help, access, database, developers, data, repair, corrupt, designers, programmers, professional, Microsoft, MS, experts, software, development, programming, English, 97, 2000, XP, 2002, 2003">
 
 <link rel="stylesheet" href="/forums/stylesheets/uaa.css" type="text/css">
 <link rel="shortcut icon" href="/forums/images/favicon.ico">
@@ -43,7 +43,7 @@
     <tbody><tr>
      <td width="33" class="UA_HeaderGlobe"><img src="http://www.utteraccess.com/forums/images/ua_globe.gif" alt=""></td>
      <td width="*" class="UA_HeaderGlobe">
-      Microsoft<small><sup>®</sup></small> Access, Excel, Word, Outlook<small><sup>®</sup></small>, Visual Basic<small><sup>®</sup></small>, SQL Server<small><sup>®</sup></small>, Office online help discussion forums. And... many more!
+      Microsoft<small><sup>®</sup></small> Access help forums plus Excel, Word, Outlook<small><sup>®</sup></small>, Visual Basic<small><sup>®</sup></small>, SQL Server<small><sup>®</sup></small>, Office online and... many more!
      </td>
     </tr>
    </tbody></table>
@@ -146,14 +146,31 @@
     </tbody></table>
 <!-- SiteSearch Google -->
    </div>
+<!-- S Google -->
    <br>
-   <div class="UA_LeftCaption">General Options</div>
+   <div class="UA_LeftCaption">More Links</div>
    <div class="UA_LeftContent">
-    •&nbsp;<a class="UA_LeftHyper2" href="http://www.utteraccess.com/links/">UtterAccess Links</a><br>
-    •&nbsp;<a class="UA_LeftHyper2" href="http://www.utteraccess.com/index.php?Cat=&amp;Action=link">Link to UtterAccess</a><br>
-    •&nbsp;<a class="UA_LeftHyper2" href="#" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://www.UtterAccess.com');">Call UtterAccess Home</a><br>
-    •&nbsp;<script type="text/javascript" language="JavaScript">var url="http://www.UtterAccess.com";var title="UtterAccess.com";function AddToFaves(){window.external.AddFavorite(url,title);};</script><a class="UA_LeftHyper2" href="javascript: AddToFaves()">Add UA to Favorites</a><br>
-    •&nbsp;<a class="UA_LeftHyper2" href="http://www.utteraccess.com/index.php?Cat=&amp;paction=" recommend"="">Recommend UtterAccess</a>
+    <script type="text/javascript"><!--
+     google_ad_client = "pub-6904285769967574";
+     google_alternate_color = "EEEEEE";
+     google_ad_width = 120;
+     google_ad_height = 90;
+     google_ad_format = "120x90_0ads_al_s";
+     google_ad_channel ="0353726098";
+     google_color_border = "EEEEEE";
+     google_color_bg = "EEEEEE";
+     google_color_link = "0000FF";
+     google_color_url = "0000FF";
+     google_color_text = "FFFFFF";
+     //--></script>
+     <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+     </script>
+<!-- S Google -->
+    <br>
+    &nbsp;&nbsp;<a class="UA_LeftHyper2" href="http://www.utteraccess.com/links/">UtterAccess Links</a><br>
+    &nbsp;&nbsp;<a class="UA_LeftHyper2" href="http://www.utteraccess.com/index.php?Cat=&amp;Action=link">Link to UtterAccess</a><br>
+    &nbsp;&nbsp;<a class="UA_LeftHyper2" href="#" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://www.UtterAccess.com');">Call UtterAccess Home</a><br>
+    &nbsp;&nbsp;<script type="text/javascript" language="JavaScript">var url="http://www.UtterAccess.com";var title="UtterAccess.com";function AddToFaves(){window.external.AddFavorite(url,title);};</script><a class="UA_LeftHyper2" href="javascript: AddToFaves()">Add UA to Favorites</a><br>
    </div>
    <br>
    <div class="UA_LeftCaption">Quick Jump</div>
@@ -266,6 +283,6 @@ webmaster@UtterAccess.com</a></font><br>
 <a class="UA_Nav" href="http://www.utteraccess.com/forums/uacookie.php?Cat=">UA Cookies</a>
 &nbsp;&nbsp;
 <a class="UA_Nav" href="#top">Top</a>
-<br><br>Delivered to you by Shiny New Server in 0.035 seconds. 0 seconds to process 5 queries. Zlib compression enabled.
+<br><br>Delivered to you by Shiny New Server in 0.016 seconds. 0.001 seconds to process 5 queries. Zlib compression enabled.
 
 </div></body></html>
