clixshare.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 7056,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.98,
  "homepage_snapshot_redirected_domain": "clixshare.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402211613id_/http://clixshare.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402211613id_/http%3A//clixshare.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "clixshare.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615053624id_/http%3A//www.clixshare.com/%3Fmode%3Dpolicy",
  "policy_title": "clixShare.com - PPC Advertising Network - Partnership Application",
  "policy_url": "clixshare.com/?mode=policy",
  "sha1": "1f61b09d4419b0350e3fd4ef434936d261fc2da0",
  "simhash": 17019310069582018700,
  "simhash_updated": false,
  "site_hostname": "clixshare.com",
  "site_url": "http://clixshare.com",
  "smog": 13.02,
  "strict_updated": false,
  "timestamp": "20060615053624",
  "word_count": 1134,
  "year": 2006
}

--- a/c/cl/cli/clixshare.com.html
+++ b/c/cl/cli/clixshare.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the clixshare.com privacy policy that was archived on 2005-08-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050829184917id_/http%3A//clixshare.com%3Fmode%3Dpolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the clixshare.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615053624id_/http%3A//www.clixshare.com/%3Fmode%3Dpolicy) for the most accurate reproduction.-->
 
 <html><head>
 <title>clixShare.com -  PPC Advertising Network - Partnership Application</title>
 <meta name="DESCRIPTION" content="clixShare.com is a Pay Per Click (PPC) advertising distribution network specifically developed with PPC search engines owners in mind. We offer a highly flexible partnership program that is designed with the main objective: to maximize your revenues and the potential of your web site.">
 <meta name="KEYWORDS" content="pay per click advertising, search engine, ppc, advertising, advertisement, contextual, marketing, content, distribution, targeted, web site traffic, advertise web site, google, adsense, adwords, alternate ad url, google public ads, advertising web site, affiliate program, contextual ads, ads, cpc, pay for placement, pay for ranking, clixshare, search engines, bid for location, cost per click, pay for performance, pay-per-click">
-<meta name="copyright" content="© 2003-2004 Wild Wild Web, Inc.">
+<meta name="copyright" content="© 2003-2005 Wild Wild Web, Inc.">
 <meta name="robots" content="index,follow">
 <meta name="revisit-after" content="10 Days">
 <meta http-equiv="Pragma" content="no-cache">
@@ -48,6 +48,14 @@
         return;		
 	}
 
+	function showDate()
+	{
+		Days = new Array('Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday','Friday', 'Saturday');
+		Months = new Array('January', 'Febuary', 'March', 'April', 'May', 'June','July', 'August', 'September', 'October', 'November', 'December');
+		now = new Date();
+		document.write(Days[now.getDay()] + ', ' + Months[now.getMonth()] + ' ' + now.getDate());
+	}
+
 	function stat()
 	{
 		window.status = arguments.length==0 ? "" : arguments[0];
@@ -79,7 +87,7 @@
 <tbody><tr>
 	<td width="400" height="80" background="/images/header2.jpg">
 	<form name="formSearch1" action="/search.clix" method="get" onsubmit="return searchWhat(this)">
-	<input type="hidden" name="rid" value="41357">
+	<input type="hidden" name="rid" value="49773">
  	<br>&nbsp; &nbsp; &nbsp; &nbsp;
 	<input type="text" name="q" style="font-size=11px;font-weight:bold;width:150px;height:20px;background-color:FFC000;" value="">
  	<input type="submit" class="button" style="font-size=11px;font-weight:bold;" value="SEARCH">
@@ -93,11 +101,11 @@
 
 	<table width="100%" border="0" cellpadding="0" cellspacing="0">
 	<tbody><tr>
-	<td width="250" align="center" valign="top">
+	<td width="240" align="center" valign="top">
 
 	</td>
 
-	<td height="16" valign="bottom" align="right" class="link4"><b>Monday, August 29</b>&nbsp;</td>
+	<td height="16" valign="bottom" align="right" class="link4"><b>Thursday, June 15</b>&nbsp;</td>
 	</tr>
 	</tbody></table>
 
@@ -113,10 +121,10 @@
 <!--{top menu-->
 <table width="770" align="center" border="0" cellspacing="0" cellpadding="0" background="/images/top_bg.gif">
 <tbody><tr height="23">
-  <td align="center"><img border="0" src="/images/home.gif" width="13" height="11"> <a class="top" href="/" onmouseover="return stat('Home Page')" onmouseout="return stat()">Home</a></td>
-  <td align="center"><a class="top" href="/?mode=about" onmouseover="return stat('About Us')" onmouseout="return stat()">About Us</a></td>
-  <td align="center"><a class="top" href="/?mode=affiliates_qualifications" onmouseover="return stat('Partners Qualifications')" onmouseout="return stat()">Qualifications</a></td>
-  <td align="center"><a class="top" href="/?mode=faq" onmouseover="return stat('Program FAQ\'s')" onmouseout="return stat()">FAQ's</a></td>
+  <td align="center"><img border="0" src="/images/home.gif" width="13" height="11"> <a class="top" href="http://www.clixshare.com/" onmouseover="return stat('Home Page')" onmouseout="return stat()">Home</a></td>
+  <td align="center"><a class="top" href="http://www.clixshare.com/?mode=about" onmouseover="return stat('About Us')" onmouseout="return stat()">About Us</a></td>
+  <td align="center"><a class="top" href="http://www.clixshare.com/?mode=affiliates_qualifications" onmouseover="return stat('Partners Qualifications')" onmouseout="return stat()">Qualifications</a></td>
+  <td align="center"><a class="top" href="http://www.clixshare.com/?mode=faq" onmouseover="return stat('Program FAQ\'s')" onmouseout="return stat()">FAQ's</a></td>
   <td align="center"><a class="top" href="http://directory.clixshare.com/" onmouseover="return stat('Browse the Directory')" onmouseout="return stat()">Directory</a></td>
   <td width="25%" align="center"><img src="/images/flag-uk.gif" width="15" height="9"> <a class="top" href="http://www.clixshare.co.uk/" onmouseover="return stat('United Kingdom')" onmouseout="return stat()">United Kingdom</a> <font color="red"><b>NEW!</b></font></td>
 </tr>
@@ -137,18 +145,18 @@
 <!--left navigation-->
 <table border="0" cellpadding="0" cellspacing="0" width="163" bgcolor="FFC000">
 <tbody><tr><td background="images/header_bg.gif" align="center" height="24" class="pheader"><b>PARTNER WITH US</b></td></tr>
-<tr><td height="18"><li class="litem1"><a class="link1" href="/?mode=affiliates_options" onmouseover="return stat('Program Overview')" onmouseout="return stat()"><b>Program Overview</b></a></li></td></tr>
-<tr><td height="18"><li class="litem1"><a class="link1" href="/?mode=affiliates_qualifications" onmouseover="return stat('Requirements')" onmouseout="return stat()"><b>Requirements</b></a></li></td></tr>
-<tr><td height="18"><li class="litem1"><a class="link1" href="/?mode=faq" onmouseover="return stat('Program FAQ\'s')" onmouseout="return stat()"><b>Program FAQ's</b></a></li></td></tr>
-<tr><td height="18"><li class="litem1"><a class="link1" href="/?mode=terms" onmouseover="return stat('Terms of Service')" onmouseout="return stat()"><b>Terms of Service</b></a></li></td></tr>
-<tr><td height="18"><li class="litem1"><a class="link1" href="/?mode=policy" onmouseover="return stat('Privacy Policy')" onmouseout="return stat()"><b>Privacy Policy</b></a></li></td></tr>
-<tr><td height="18"><li class="litem1"><a class="link1" href="/?mode=affiliates&amp;affMode=register" onmouseover="return stat('Apply Today!')" onmouseout="return stat()"><b><font color="magenta">Apply Today!</font></b></a></li></td></tr>
-<tr><td height="18"><li class="litem1"><a class="link1" href="/?mode=affiliates&amp;affMode=login" onmouseover="return stat('My Account')" onmouseout="return stat()"><b>My Account</b></a></li></td></tr>
+<tr><td height="18">&nbsp;<img src="/images/arrow2.gif" width="13" height="13"> <a class="link1" href="http://www.clixshare.com/?mode=affiliates_options" onmouseover="return stat('Program Overview')" onmouseout="return stat()"><b>Program Overview</b></a></td></tr>
+<tr><td height="18">&nbsp;<img src="/images/arrow2.gif" width="13" height="13"> <a class="link1" href="http://www.clixshare.com/?mode=affiliates_qualifications" onmouseover="return stat('Requirements')" onmouseout="return stat()"><b>Requirements</b></a></td></tr>
+<tr><td height="18">&nbsp;<img src="/images/arrow2.gif" width="13" height="13"> <a class="link1" href="http://www.clixshare.com/?mode=faq" onmouseover="return stat('Program FAQ\'s')" onmouseout="return stat()"><b>Program FAQ's</b></a></td></tr>
+<tr><td height="18">&nbsp;<img src="/images/arrow2.gif" width="13" height="13"> <a class="link1" href="http://www.clixshare.com/?mode=terms" onmouseover="return stat('Terms of Service')" onmouseout="return stat()"><b>Terms of Service</b></a></td></tr>
+<tr><td height="18">&nbsp;<img src="/images/arrow2.gif" width="13" height="13"> <a class="link1" href="http://www.clixshare.com/?mode=policy" onmouseover="return stat('Privacy Policy')" onmouseout="return stat()"><b>Privacy Policy</b></a></td></tr>
+<tr><td height="18">&nbsp;<img src="/images/arrow2.gif" width="13" height="13"> <a class="link1" href="http://my.clixshare.com/?mode=affiliates&amp;affMode=register" onmouseover="return stat('Apply Today!')" onmouseout="return stat()"><b><font color="magenta">Apply Today!</font></b></a></td></tr>
+<tr><td height="18">&nbsp;<img src="/images/arrow2.gif" width="13" height="13"> <a class="link1" href="http://my.clixshare.com/?mode=affiliates&amp;affMode=login" onmouseover="return stat('My Account')" onmouseout="return stat()"><b>My Account</b></a></td></tr>
 </tbody></table>
 <br>
-<table border="0" cellpadding="0" cellspacing="0" width="163" bgcolor="#FFC000">
+<table border="0" cellpadding="0" cellspacing="0" width="163" bgcolor="FFC000">
 <tbody><tr><td background="images/header_bg.gif" align="center" height="24" class="pheader"><b>SPECIAL OFFERS</b></td></tr>
-<tr><td height="20"><li class="litem1"><a class="link1" href="/?mode=portxml" onmouseover="return stat('Own PPC Search Engine - FREE!')" onmouseout="return stat()"><b>Own PPC SE - FREE!</b></a></li></td></tr>
+<tr><td height="20">&nbsp;<img src="/images/arrow2.gif" width="13" height="13"> <a class="link1" href="http://www.clixshare.com/?mode=portxml" onmouseover="return stat('Own PPC Search Engine - FREE!')" onmouseout="return stat()"><b>Own PPC SE - FREE!</b></a></td></tr>
 </tbody></table>
 <!--left navigation--></td>
 
@@ -234,13 +242,12 @@
 
 <table bgcolor="#5990AA" width="770" align="center" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-  <td width="160" align="left"><a href="http://www.findomania.com/"><img src="/images/footer.jpg" width="160" height="40" border="0" alt="(c) 2003-2005 by Wild Wild Web, Inc." title="(c) 2003-2005 by Wild Wild Web, Inc."></a></td>
-  <td align="center"><a class="link4" href="/?mode=terms" onmouseover="return stat('Terms of Service')" onmouseout="return stat()"><b>Terms of Service</b></a></td>
-  <td align="center"><a class="link4" href="/?mode=faq" onmouseover="return stat('Program FAQ\'s')" onmouseout="return stat()"><b>FAQ's</b></a></td>
-  <td align="center"><a class="link4" href="/?mode=policy" onmouseover="return stat('Privacy Policy')" onmouseout="return stat()"><b>Privacy Policy</b></a></td>
-  <td width="190" align="center">
-<!-- PayPal Logo --><table border="0" cellpadding="0" cellspacing="0" align="center"><tbody><tr><td align="center"></td></tr>
-<tr><td align="center"><a href="#" onclick="javascript:window.open('https://www.paypal.com/us/cgi-bin/webscr?cmd=xpt/popup/OLCWhatIsPayPal-outside','olcwhatispaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, resizable=no', width='400', height='350');"><img src="https://www.paypal.com/en_US/i/bnr/bnr_paymentsBy_150x40.gif" border="0" alt="We pay by US Check, via PayPal or Moneybookers."></a></td></tr></tbody></table><!-- PayPal Logo -->  </td>
+  <td width="180" align="left"><img src="/images/footer.jpg" width="160" height="40" border="0" alt="(c) 2003-2006 by Wild Wild Web, Inc." title="(c) 2003-2006 by Wild Wild Web, Inc."></td>
+  <td align="center"><a class="link4" href="http://www.clixshare.com/?mode=terms" onmouseover="return stat('Terms of Service')" onmouseout="return stat()"><b>Terms of Service</b></a></td>
+  <td align="center"><a class="link4" href="http://www.clixshare.com/?mode=faq" onmouseover="return stat('Program FAQ\'s')" onmouseout="return stat()"><b>FAQ's</b></a></td>
+  <td align="center"><a class="link4" href="http://www.clixshare.com/?mode=policy" onmouseover="return stat('Privacy Policy')" onmouseout="return stat()"><b>Privacy Policy</b></a></td>
+  <td width="190" align="center"><a href="http://www.bbbonline.org/cks.asp?id=105090813912" target="_blank" onmouseover="return stat('BBBonline Reliability Program')" onmouseout="return stat()"><img border="0" src="/images/ReliabilitySeal4.gif" width="90" height="32" alt="Click to Verify!"></a>
+	<img src="http://www.supertop100.com/ppc/b/1/1387.gif" alt="" width="0" height="0" border="0"></td>
 </tr>
 </tbody></table>
 
