uni.edu (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 4575,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.99,
  "homepage_snapshot_redirected_domain": "uni.edu",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060401002611id_/http://www.uni.edu/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060401002611id_/http%3A//uni.edu",
  "interval": "2006_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "uni.edu",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615054218id_/http%3A//www.uni.edu/pres/policies/privacy.shtml",
  "policy_title": "UNI | Web Policy Statement",
  "policy_url": "uni.edu/pres/policies/privacy.shtml",
  "sha1": "6d4684ca8502270c62f1ba03fb527bf7a1480540",
  "simhash": 13841204776341277084,
  "simhash_updated": true,
  "site_hostname": "uni.edu",
  "site_url": "http://uni.edu",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20060615054218",
  "word_count": 718,
  "year": 2006
}

--- a/u/un/uni/uni.edu.html
+++ b/u/un/uni/uni.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the uni.edu privacy policy that was archived on 2005-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051222013934id_/http%3A//www.uni.edu/pres/policies/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the uni.edu privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615054218id_/http%3A//www.uni.edu/pres/policies/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>UNI | Web Policy Statement</title>
@@ -73,7 +73,7 @@ information submitted through the UNI Web site is handled. </p>
   governed by applicable Iowa statutes, including, but not limited to Chapter 22 of the <a href="http://www.legis.state.ia.us/IowaLaw.html">Code 
   of Iowa</a>, and by any applicable U.S. federal laws. The University of Northern Iowa respects 
   the privacy of users visiting our Web sites and will abide by all applicable laws concerning 
-  the release of personal information (e.g., <a href="/help/caution.htm">Family Educational Rights and Privacy Act of 1974)</a>.
+  the release of personal information (e.g., <a href="http://access.uni.edu/help/caution.htm">Family Educational Rights and Privacy Act of 1974)</a>.
 </p>
       <p>&nbsp;      </p>
     
@@ -88,18 +88,18 @@ particular site.
       <p>&nbsp;      </p>
       <p>When you access official UNI Web pages, certain client information and essential, as well as 
 nonessential technical information (collectively referred to as access information) is automatically 
-collected. To see a list of this information, view <a href="/help/accessInfo.html">Access Information (Automatically Collected)</a>. 
+collected. To see a list of this information, view <a href="http://access.uni.edu/help/accessInfo.html">Access Information (Automatically Collected)</a>. 
 No other information is collected through our official Web sites except when you deliberately send it 
 to us (for example, by clicking on a link to send us an e-mail). To see examples of the information you 
-might choose to send us, see <a href="/help/optInfo.html">Optional Information (Deliberately Sent)</a>.
+might choose to send us, see <a href="http://access.uni.edu/help/optInfo.html">Optional Information (Deliberately Sent)</a>.
 </p>
       <p>&nbsp;      </p>
       <h4>The Way We Use Information</h4>
       <p>As a general rule, UNI does not track individual visitor profiles. We do, however, analyze 
 aggregate traffic and access information for resource management and site planning purposes. 
 UNI reserves the right to use log details to investigate resource management or security concerns. 
-To find out how we use access information, see <a href="/help/accessInfo.html#Uses">Access Information Uses</a>. To find out how we use
-optional information, see <a href="/help/optInfo.html#Uses">Optional Information Uses</a>.
+To find out how we use access information, see <a href="http://access.uni.edu/help/accessInfo.html#Uses">Access Information Uses</a>. To find out how we use
+optional information, see <a href="http://access.uni.edu/help/optInfo.html#Uses">Optional Information Uses</a>.
 We will never sell or rent your e-mail address or other individual personal information with anyone without your advance permission. Information submitted to us is used to interact with you based on your request for information or continue communications based on a prior relationship.</p>
  <p>&nbsp;      </p>
 <h4>Providing Information is Your Choice </h4>
@@ -135,7 +135,7 @@ the persons responsible for that site so that you may make your request directly
         <p class="footer">Maintained by <a href="mailto:umpr@uni.edu">University Marketing and Public Relations</a>. <br>
           Send comments or suggestions to the <a href="mailto:access-uni@uni.edu">Data Access Team</a>.<br>
           Last Updated:
-          <!-- #BeginDate format:Am1 -->September 16, 2005<!-- #EndDate -->
+          <!-- #BeginDate format:Am1 -->February 27, 2006<!-- #EndDate -->
 </p>
         <p>&nbsp;</p>
         <h6>Copyright © 2005 University of Northern Iowa. All rights reserved. | <a href="http://www.uni.edu/pres/policies/privacy.shtml">Privacy Statement</a> | <a href="http://www.uni.edu/pres/policies/index.shtml">Policies &amp; Procedures</a>        </h6>
